# rust-web-server-loadtest

./: .gitignore  Cargo.toml  README.md  axum-loadtest.sh  warp-loadtest.sh
src/: main.rs
